# VeryDot-Core

./: Cargo.toml  package.json
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs
deployment/docker/docker-compose/: development.yml
docs/: Architecture  ICAV Flow.mmd  IV Taxonomy.md  Testing.mmd
docs/Architecture/: Diagrams.mmd
frontend/: package.json
node/: Cargo.toml
node/src/: main.rs
pallets/verydot-identity/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build.sh
scripts/development/: setup-dev.sh
