[package]
name = "verydot-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
# Substrate dependencies
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-identity = { workspace = true }

# Other dependencies
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }

# Local dependencies
verydot-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-identity/std",
    "scale-info/std",
    "parity-scale-codec/std",
    "verydot-primitives/std",
]
